Replace Collectors.toList() use in bragg calibration
Use the Stream.toList() alternative.

Change-Id: I57e2dde4ae4e70044bb28127638c49e3ff672633